[package]
name = "radioklw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
serde = { version = "1", features = ["derive", "rc"]}
async_once = "0.2.6"
termion = "3.0.0"
reqwest = { version = "0.12.3", features = ["json"] }
#async-std = { version = "1", features = ["unstable", "tokio1"]}
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde_json = "1.0.116"
serde_derive = "1.0.198"
serde_urlencoded = "0.7.1"
url = "2.5.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
dns-lookup = "2.0.4"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
